--- a/console.kv
+++ b/console.kv
@@ -60,15 +60,15 @@ MDBoxLayout:
                         Widget
                         MDBoxLayout
                             size_hint_x: None
-                            width: 200
+                            width: 120
                             Label
                                 text: 'Frequency:'
-                                font_size: 18
+                                font_size: 12
                             TextInput
                                 id: repeat_in_seconds_gb
                                 size_hint: None, None
-                                width: 80
-                                height: 50
+                                width: 45
+                                height: 30
                                 text: '30'
                                 background_color: .75, .75, .75
                         Widget
@@ -144,18 +144,19 @@ MDBoxLayout:
 
                     MDBoxLayout:
                         orientation: 'vertical'
+
                         Widget
                         MDBoxLayout
                             size_hint_x: None
-                            width: 200
+                            width: 120
                             Label
                                 text: 'Frequency:'
-                                font_size: 18
+                                font_size: 12
                             TextInput
                                 id: repeat_in_seconds_lk
                                 size_hint: None, None
-                                width: 80
-                                height: 50
+                                width: 45
+                                height: 30
                                 text: '30'
                                 background_color: .75, .75, .75
                         Widget
@@ -203,14 +204,18 @@ MDBoxLayout:
                         MDBoxLayout
                             size_hint_x: None
                             width: 200
+                        Widget
+                        MDBoxLayout
+                            size_hint_x: None
+                            width: 120
                             Label
                                 text: 'Frequency:'
-                                font_size: 18
+                                font_size: 12
                             TextInput
                                 id: repeat_in_seconds_tm
                                 size_hint: None, None
-                                width: 80
-                                height: 50
+                                width: 45
+                                height: 30
                                 text: '30'
                                 background_color: .75, .75, .75
                         Widget
@@ -283,15 +288,15 @@ MDBoxLayout:
                         Widget
                         MDBoxLayout
                             size_hint_x: None
-                            width: 200
+                            width: 120
                             Label
                                 text: 'Frequency:'
-                                font_size: 18
+                                font_size: 12
                             TextInput
                                 id: repeat_in_seconds_lw
                                 size_hint: None, None
-                                width: 80
-                                height: 50
+                                width: 45
+                                height: 30
                                 text: '30'
                                 background_color: .75, .75, .75
                         Widget
@@ -332,7 +337,7 @@ MDBoxLayout:
                             text: "WED"
                             text_color: 0, 1, 0
                         MDSwitch:
-                            
+
                             on_active: app.rundown_switch(self.active, "*LW.RUNORDERS.WEDNESDAY", "stories/lw/wed/", "lw/lw_wed", '   [color=00ff00]')
 
                     MDBoxLayout:
@@ -369,15 +374,15 @@ MDBoxLayout:
                         Widget
                         MDBoxLayout
                             size_hint_x: None
-                            width: 200
+                            width: 120
                             Label
                                 text: 'Frequency:'
-                                font_size: 18
+                                font_size: 12
                             TextInput
                                 id: repeat_in_seconds_cs
                                 size_hint: None, None
-                                width: 80
-                                height: 50
+                                width: 45
+                                height: 30
                                 text: '30'
                                 background_color: .75, .75, .75
                         Widget
