automate feature added

--- a/console.kv
+++ b/console.kv
@@ -560,7 +560,7 @@ MDBoxLayout:
                             text: "C_1"
                             text_color: 1, 0.941, 0
                         MDSwitch:
-                            on_active: app.rundown_switch(self.active, "*CTS.TX.TC3_TM", "stories/lw/fri/", "lw/lw_fri", '   [color=ff0099]')
+                            on_active: app.rundown_switch(self.active, "CTS.TX.TC2_LW", "stories/cs/", "cs/cs", '   [color=ffff00]')
 
                     MDBoxLayout:
                         orientation:'vertical'
@@ -638,5 +638,5 @@ MDBoxLayout:
                 id: console_lw
             Spacer
             ConsoleWindow
-                id: console_custom
+                id: console_cs
             Spacer
